# Guardrails-for-rag

./: .env  README.md  main.py  pyproject.toml  requirement.txt
chroma_db/: chroma.sqlite3
output/: results.txt
